<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_mensaje"
        android:layout_width="208dp"
        android:layout_height="87dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codigo"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorPrimary"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="81sp"
                android:background="@color/text"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_cancelar" />

            <TextView
                android:layout_width="45sp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_enviar"
                android:layout_width="81sp"
                android:background="@color/text"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_enviar" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>